--- a/IFY.Shimr/IFY.Shimr.csproj
+++ b/IFY.Shimr/IFY.Shimr.csproj
@@ -4,9 +4,11 @@
         <Nullable>enable</Nullable>
 
         <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+        <GenerateDocumentationFile>true</GenerateDocumentationFile>
         <PublishRepositoryUrl>true</PublishRepositoryUrl>
         <IncludeSymbols>true</IncludeSymbols>
         <SymbolPackageFormat>snupkg</SymbolPackageFormat>
+        <EnforceCodeStyleInBuild>true</EnforceCodeStyleInBuild>
 
         <Authors>IFYates</Authors>
         <PackageLicenseExpression>MIT</PackageLicenseExpression>
@@ -16,23 +18,27 @@
         <PackageProjectUrl>https://github.com/IFYates/Shimterface</PackageProjectUrl>
         <RepositoryUrl>https://github.com/IFYates/Shimterface</RepositoryUrl>
         <RepositoryType>GitHub</RepositoryType>
-        <PackageReleaseNotes>
-          [v2.0.0] Rename to IFY.Shimr
-          [v1.6.9] New namespace for extension methods
-          [v1.6.8] Fixed issue #19 - Exception shimming certain method overrides
-          [v1.6.7] Fixed issue #17 - .NET 6 support for constructors on generic types
-          [v1.6.6] Fixed issue #16 - invalid shim for multiple args to generic type constructor
-        </PackageReleaseNotes>
+        <PackageReleaseNotes>[v2.0.0] Rename to IFY.Shimr
+[v1.6.9] New namespace for extension methods
+[v1.6.8] Fixed issue #19 - Exception shimming certain method overrides
+[v1.6.7] Fixed issue #17 - .NET 6 support for constructors on generic types
+[v1.6.6] Fixed issue #16 - invalid shim for multiple args to generic type constructor</PackageReleaseNotes>
         <Copyright>(c) IFYates</Copyright>
         <Description>Utility for creating a dynamic object facade/proxy to allow for using an object as an interface that it does not explicitly implement.</Description>
+        <PackageReadmeFile>README.md</PackageReadmeFile>
+        <DocumentationFile>IFY.Shimr.xml</DocumentationFile>
     </PropertyGroup>
+    
+    <ItemGroup>
+      <None Remove="IFY.Shimr.xml" />
+    </ItemGroup>
 
-    <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
-      <DocumentationFile>IFY.Shimr.xml</DocumentationFile>
-    </PropertyGroup>
-    <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-      <DocumentationFile>IFY.Shimr.xml</DocumentationFile>
-    </PropertyGroup>
+    <ItemGroup>
+      <None Include="..\README.md">
+        <Pack>true</Pack>
+        <PackagePath>\</PackagePath>
+      </None>
+    </ItemGroup>
 
     <ItemGroup>
         <PackageReference Include="System.Reflection.Emit" Version="4.7.0" />
