--- a/IFY.Shimr/IFY.Shimr.csproj
+++ b/IFY.Shimr/IFY.Shimr.csproj
@@ -19,12 +19,11 @@
         <PackageProjectUrl>https://github.com/IFYates/Shimterface</PackageProjectUrl>
         <RepositoryUrl>https://github.com/IFYates/Shimterface</RepositoryUrl>
         <RepositoryType>GitHub</RepositoryType>
-        <PackageReleaseNotes>[v2.0.1] Code tidy for C# 11
+        <PackageReleaseNotes>[v2.0.2] Fixed issue #28 - Cannot auto-shim IEnumerable&lt;&gt; return type
+[v2.0.1] Code tidy for C# 11
 [v2.0.0] Rename to IFY.Shimr
 [v1.6.9] New namespace for extension methods
-[v1.6.8] Fixed issue #19 - Exception shimming certain method overrides
-[v1.6.7] Fixed issue #17 - .NET 6 support for constructors on generic types
-[v1.6.6] Fixed issue #16 - invalid shim for multiple args to generic type constructor</PackageReleaseNotes>
+[v1.6.8] Fixed issue #19 - Exception shimming certain method overrides</PackageReleaseNotes>
         <Copyright>(c) IFYates</Copyright>
         <Description>Utility for creating a dynamic object facade/proxy to allow for using an object as an interface that it does not explicitly implement.</Description>
         <PackageReadmeFile>README.md</PackageReadmeFile>
