--- a/IFY.Shimr/IFY.Shimr.csproj
+++ b/IFY.Shimr/IFY.Shimr.csproj
@@ -2,6 +2,7 @@
     <PropertyGroup>
         <TargetFramework>netstandard2.1</TargetFramework>
         <Nullable>enable</Nullable>
+		<LangVersion>latest</LangVersion>
 
         <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
         <GenerateDocumentationFile>true</GenerateDocumentationFile>
