--- a/IFY.Shimr.CodeGen/IFY.Shimr.CodeGen.csproj
+++ b/IFY.Shimr.CodeGen/IFY.Shimr.CodeGen.csproj
@@ -1,12 +1,21 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
 		<TargetFramework>netstandard2.0</TargetFramework>
 		<Nullable>enable</Nullable>
+		<ImplicitUsings>enable</ImplicitUsings>
 		<IsRoslynComponent>true</IsRoslynComponent>
 		<LangVersion>latest</LangVersion>
 		<EnforceExtendedAnalyzerRules>true</EnforceExtendedAnalyzerRules>
 	</PropertyGroup>
+
+	<ItemGroup>
+	  <Compile Include="..\IFY.Shimr\GlobalUsings.cs" Link="GlobalUsings.cs" />
+	  <Compile Include="..\IFY.Shimr\IShim.cs" Link="_Common\IShim.cs" />
+		<Compile Include="..\IFY.Shimr\ShimAttribute.cs" Link="_Common\ShimAttribute.cs" />
+		<Compile Include="..\IFY.Shimr\StaticShimAttribute.cs" Link="_Common\StaticShimAttribute.cs" />
+		<Compile Include="..\IFY.Shimr\TypeShimAttribute.cs" Link="_Common\TypeShimAttribute.cs" />
+	</ItemGroup>
 
 	<ItemGroup>
 		<PackageReference Include="Microsoft.CodeAnalysis.Common" Version="4.10.0" />
