--- a/IFY.Shimr.CodeGen/IFY.Shimr.CodeGen.csproj
+++ b/IFY.Shimr.CodeGen/IFY.Shimr.CodeGen.csproj
@@ -7,11 +7,38 @@
 		<IsRoslynComponent>true</IsRoslynComponent>
 		<LangVersion>latest</LangVersion>
 		<EnforceExtendedAnalyzerRules>true</EnforceExtendedAnalyzerRules>
+
+		<GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+		<GenerateDocumentationFile>true</GenerateDocumentationFile>
+		<PublishRepositoryUrl>true</PublishRepositoryUrl>
+		<IncludeSymbols>true</IncludeSymbols>
+		<SymbolPackageFormat>snupkg</SymbolPackageFormat>
+		<EnforceCodeStyleInBuild>true</EnforceCodeStyleInBuild>
+
+		<Authors>IFYates</Authors>
+		<PackageLicenseExpression>MIT</PackageLicenseExpression>
+		<Version>3.0.0</Version>
+		<AssemblyVersion>3.0.0</AssemblyVersion>
+		<FileVersion>3.0.0</FileVersion>
+		<PackageProjectUrl>https://github.com/IFYates/Shimterface</PackageProjectUrl>
+		<RepositoryUrl>https://github.com/IFYates/Shimterface</RepositoryUrl>
+		<RepositoryType>GitHub</RepositoryType>
+		<PackageReleaseNotes>[v3.0.0] Full re-implementation using dotnet sourcegen (#26)
+		</PackageReleaseNotes>
+		<Copyright>(c) IFYates</Copyright>
+		<Description>Utility for creating a dynamic object facade/proxy to allow for using an object as an interface that it does not explicitly implement.</Description>
+		<PackageReadmeFile>README.md</PackageReadmeFile>
+		<DocumentationFile>IFY.Shimr.CodeGen.xml</DocumentationFile>
 	</PropertyGroup>
 
 	<ItemGroup>
-	  <Compile Include="..\IFY.Shimr\GlobalUsings.cs" Link="GlobalUsings.cs" />
-	  <Compile Include="..\IFY.Shimr\IShim.cs" Link="_Common\IShim.cs" />
+		<None Remove="IFY.Shimr.CodeGen.xml" />
+	</ItemGroup>
+
+	<ItemGroup>
+		<Compile Include="..\IFY.Shimr\ConstructorShimAttribute.cs" Link="ConstructorShimAttribute.cs" />
+		<Compile Include="..\IFY.Shimr\GlobalUsings.cs" Link="GlobalUsings.cs" />
+		<Compile Include="..\IFY.Shimr\IShim.cs" Link="_Common\IShim.cs" />
 		<Compile Include="..\IFY.Shimr\ShimAttribute.cs" Link="_Common\ShimAttribute.cs" />
 		<Compile Include="..\IFY.Shimr\StaticShimAttribute.cs" Link="_Common\StaticShimAttribute.cs" />
 		<Compile Include="..\IFY.Shimr\TypeShimAttribute.cs" Link="_Common\TypeShimAttribute.cs" />
@@ -25,6 +52,10 @@
 
 	<ItemGroup>
 		<None Include="$(OutputPath)\$(AssemblyName).dll" Pack="true" PackagePath="analyzers/dotnet/cs" Visible="false" />
+		<None Include="..\README.md" Link="README.md">
+			<PackagePath>\</PackagePath>
+			<Pack>true</Pack>
+		</None>
 	</ItemGroup>
 
 </Project>
