Support array and IEnumerable return shim

--- a/IFY.Shimr.CodeGen.Tests/IFY.Shimr.CodeGen.Tests.csproj
+++ b/IFY.Shimr.CodeGen.Tests/IFY.Shimr.CodeGen.Tests.csproj
@@ -6,6 +6,7 @@
 		<Nullable>enable</Nullable>
 		<LangVersion>latest</LangVersion>
 		<EmitCompilerGeneratedFiles>true</EmitCompilerGeneratedFiles>
+		<!-- Don't enable implicit usings as we want to ensure the generated code is complete -->
 
 		<GenerateAssemblyInfo>false</GenerateAssemblyInfo>
 		<IsPackable>false</IsPackable>
