--- a/IFY.Shimr.CodeGen.Tests/IFY.Shimr.CodeGen.Tests.csproj
+++ b/IFY.Shimr.CodeGen.Tests/IFY.Shimr.CodeGen.Tests.csproj
@@ -19,9 +19,35 @@
 	</ItemGroup>
 
 	<ItemGroup>
-	  <Compile Include="..\IFY.Shimr.Tests\Examples\DateTimeExample.cs" Link="Examples\DateTimeExample.cs" />
-	  <Compile Include="..\IFY.Shimr.Tests\Examples\FileSystemExample.cs" Link="Examples\FileSystemExample.cs" />
-	  <Compile Include="..\IFY.Shimr.Tests\Examples\ThreadExample.cs" Link="Examples\ThreadExample.cs" />
+		<Compile Include="..\IFY.Shimr.Tests\Examples\DateTimeExample.cs" Link="Shared\Examples\DateTimeExample.cs" />
+		<Compile Include="..\IFY.Shimr.Tests\Examples\FileSystemExample.cs" Link="Shared\Examples\FileSystemExample.cs" />
+		<Compile Include="..\IFY.Shimr.Tests\Examples\ThreadExample.cs" Link="Shared\Examples\ThreadExample.cs" />
+		<Compile Include="..\IFY.Shimr.Tests\AccessibilityTests.cs" Link="Shared\AccessibilityTests.cs" />
+		<Compile Include="..\IFY.Shimr.Tests\ConstructorTests.cs" Link="Shared\ConstructorTests.cs" />
+		<Compile Include="..\IFY.Shimr.Tests\EventShimTests.cs" Link="Shared\EventShimTests.cs" />
+		<Compile Include="..\IFY.Shimr.Tests\ExtendedFunctionalityTests.Field.cs" Link="Shared\ExtendedFunctionalityTests.Field.cs" />
+		<Compile Include="..\IFY.Shimr.Tests\ExtendedFunctionalityTests.Method.cs" Link="Shared\ExtendedFunctionalityTests.Method.cs" />
+		<Compile Include="..\IFY.Shimr.Tests\ExtendedFunctionalityTests.Property.cs" Link="Shared\ExtendedFunctionalityTests.Property.cs" />
+		<Compile Include="..\IFY.Shimr.Tests\FieldShimTests.cs" Link="Shared\FieldShimTests.cs" />
+		<Compile Include="..\IFY.Shimr.Tests\GenericConstructorTests.cs" Link="Shared\GenericConstructorTests.cs" />
+		<Compile Include="..\IFY.Shimr.Tests\GenericMethodTests.cs" Link="Shared\GenericMethodTests.cs" />
+		<Compile Include="..\IFY.Shimr.Tests\IndexerShimTests.cs" Link="Shared\IndexerShimTests.cs" />
+		<Compile Include="..\IFY.Shimr.Tests\InheritanceTests.cs" Link="Shared\InheritanceTests.cs" />
+		<Compile Include="..\IFY.Shimr.Tests\MethodShimTests.cs" Link="Shared\MethodShimTests.cs" />
+		<Compile Include="..\IFY.Shimr.Tests\MissingMemberTests.cs" Link="Shared\MissingMemberTests.cs" />
+		<Compile Include="..\IFY.Shimr.Tests\MultiLevelInheritanceTests.cs" Link="Shared\MultiLevelInheritanceTests.cs" />
+		<Compile Include="..\IFY.Shimr.Tests\ObjectExtensionsTests.cs" Link="Shared\ObjectExtensionsTests.cs" />
+		<Compile Include="..\IFY.Shimr.Tests\PerformanceTests.cs" Link="Shared\PerformanceTests.cs" />
+		<Compile Include="..\IFY.Shimr.Tests\PropertyShimTests.cs" Link="Shared\PropertyShimTests.cs" />
+		<Compile Include="..\IFY.Shimr.Tests\RenameMemberTests.cs" Link="Shared\RenameMemberTests.cs" />
+		<Compile Include="..\IFY.Shimr.Tests\ShimBuilderTests.cs" Link="Shared\ShimBuilderTests.cs" />
+		<Compile Include="..\IFY.Shimr.Tests\SignatureArrayChangeTests.cs" Link="Shared\SignatureArrayChangeTests.cs" />
+		<Compile Include="..\IFY.Shimr.Tests\SignatureChangeTests.cs" Link="Shared\SignatureChangeTests.cs" />
+		<Compile Include="..\IFY.Shimr.Tests\SignatureEnumerableChangeTests.cs" Link="Shared\SignatureEnumerableChangeTests.cs" />
+		<Compile Include="..\IFY.Shimr.Tests\StaticFieldShimTests.cs" Link="Shared\StaticFieldShimTests.cs" />
+		<Compile Include="..\IFY.Shimr.Tests\StaticInterfaceTests.cs" Link="Shared\StaticInterfaceTests.cs" />
+		<Compile Include="..\IFY.Shimr.Tests\StaticMemberTests.cs" Link="Shared\StaticMemberTests.cs" />
+		<Compile Include="..\IFY.Shimr.Tests\StructTests.cs" Link="Shared\StructTests.cs" />
 	</ItemGroup>
 
 	<ItemGroup>
