--- a/IFY.Shimr.CodeGen/IFY.Shimr.CodeGen.csproj
+++ b/IFY.Shimr.CodeGen/IFY.Shimr.CodeGen.csproj
@@ -32,6 +32,12 @@
 	</PropertyGroup>
 
 	<ItemGroup>
+	  <Compile Remove="Models\_old\**" />
+	  <EmbeddedResource Remove="Models\_old\**" />
+	  <None Remove="Models\_old\**" />
+	</ItemGroup>
+
+	<ItemGroup>
 		<None Remove="IFY.Shimr.CodeGen.xml" />
 	</ItemGroup>
 
