--- a/IFY.Shimr.Tests/IFY.Shimr.Tests.csproj
+++ b/IFY.Shimr.Tests/IFY.Shimr.Tests.csproj
@@ -1,8 +1,8 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
-		<!--<TargetFrameworks>netcoreapp3.1;net6.0;net8.0</TargetFrameworks>-->
-		<TargetFrameworks>net8.0</TargetFrameworks>
+		<TargetFrameworks>netcoreapp3.1;net6.0;net8.0</TargetFrameworks>
+		<!--<TargetFrameworks>net8.0</TargetFrameworks>-->
 		<Nullable>enable</Nullable>
 		<LangVersion>latest</LangVersion>
 
