--- a/IFY.Shimr.CodeGen/IFY.Shimr.CodeGen.csproj
+++ b/IFY.Shimr.CodeGen/IFY.Shimr.CodeGen.csproj
@@ -14,6 +14,8 @@
 		<IncludeSymbols>true</IncludeSymbols>
 		<SymbolPackageFormat>snupkg</SymbolPackageFormat>
 		<EnforceCodeStyleInBuild>true</EnforceCodeStyleInBuild>
+		<DefineConstants>SHIMR_CG</DefineConstants>
+		<ProjectDir>$(MSBuildProjectDirectory)</ProjectDir>
 
 		<Authors>IFYates</Authors>
 		<PackageLicenseExpression>MIT</PackageLicenseExpression>
@@ -33,6 +35,7 @@
 
 	<ItemGroup>
 		<None Remove="IFY.Shimr.CodeGen.xml" />
+		<CompilerVisibleProperty Include="ProjectDir" />
 	</ItemGroup>
 
 	<ItemGroup>
