Support for field/property proxy

--- a/IFY.Shimr.CodeGen/IFY.Shimr.CodeGen.csproj
+++ b/IFY.Shimr.CodeGen/IFY.Shimr.CodeGen.csproj
@@ -42,7 +42,9 @@
 		<Compile Include="..\IFY.Shimr\ConstructorShimAttribute.cs" Link="_Api\ConstructorShimAttribute.cs" />
 		<Compile Include="..\IFY.Shimr\GlobalUsings.cs" Link="GlobalUsings.cs" />
 		<Compile Include="..\IFY.Shimr\IShim.cs" Link="_Api\IShim.cs" />
+		<Compile Include="..\IFY.Shimr\ProxyBehaviour.cs" Link="_Api\ProxyBehaviour.cs" />
 		<Compile Include="..\IFY.Shimr\ShimAttribute.cs" Link="_Api\ShimAttribute.cs" />
+		<Compile Include="..\IFY.Shimr\ShimProxyAttribute.cs" Link="_Api\ShimProxyAttribute.cs" />
 		<Compile Include="..\IFY.Shimr\StaticShimAttribute.cs" Link="_Api\StaticShimAttribute.cs" />
 		<Compile Include="..\IFY.Shimr\TypeShimAttribute.cs" Link="_Api\TypeShimAttribute.cs" />
 	</ItemGroup>
