--- a/IFY.Shimr/IFY.Shimr.csproj
+++ b/IFY.Shimr/IFY.Shimr.csproj
@@ -20,11 +20,11 @@
         <PackageProjectUrl>https://github.com/IFYates/Shimterface</PackageProjectUrl>
         <RepositoryUrl>https://github.com/IFYates/Shimterface</RepositoryUrl>
         <RepositoryType>GitHub</RepositoryType>
-        <PackageReleaseNotes>[v2.0.2] Fixed issue #28 - Cannot auto-shim IEnumerable&lt;&gt; return type
+        <PackageReleaseNotes>[v2.0.3] Fixed support for multiple indexers on one shim
+[v2.0.2] Fixed issue #28 - Cannot auto-shim IEnumerable&lt;&gt; return type
 [v2.0.1] Code tidy for C# 11
 [v2.0.0] Rename to IFY.Shimr
-[v1.6.9] New namespace for extension methods
-[v1.6.8] Fixed issue #19 - Exception shimming certain method overrides</PackageReleaseNotes>
+[v1.6.9] New namespace for extension methods</PackageReleaseNotes>
         <Copyright>(c) IFYates</Copyright>
         <Description>Utility for creating a dynamic object facade/proxy to allow for using an object as an interface that it does not explicitly implement.</Description>
         <PackageReadmeFile>README.md</PackageReadmeFile>
