--- a/IFY.Shimr.CodeGen/IFY.Shimr.CodeGen.csproj
+++ b/IFY.Shimr.CodeGen/IFY.Shimr.CodeGen.csproj
@@ -19,9 +19,9 @@
 
 		<Authors>IFYates</Authors>
 		<PackageLicenseExpression>MIT</PackageLicenseExpression>
-		<Version>3.0.0</Version>
+		<Version>3.0.0-beta2</Version>
 		<AssemblyVersion>3.0.0</AssemblyVersion>
-		<FileVersion>3.0.0</FileVersion>
+		<FileVersion>3.0.0-beta2</FileVersion>
 		<PackageProjectUrl>https://github.com/IFYates/Shimterface</PackageProjectUrl>
 		<RepositoryUrl>https://github.com/IFYates/Shimterface</RepositoryUrl>
 		<RepositoryType>GitHub</RepositoryType>
