--- a/IFY.Shimr.SourceGen.Tests/IFY.Shimr.SourceGen.Tests.csproj
+++ b/IFY.Shimr.SourceGen.Tests/IFY.Shimr.SourceGen.Tests.csproj
@@ -22,7 +22,7 @@
 
 	<ItemGroup>
 		<Compile Include="..\IFY.Shimr.Tests\Examples\DateTimeExample.cs" Link="Shared\Examples\DateTimeExample.cs" />
-		<Compile Include="..\IFY.Shimr.Tests\Examples\FileSystemExample.cs" Link="Shared\Examples\FileSystemExample.cs" />
+		<!--<Compile Include="..\IFY.Shimr.Tests\Examples\FileSystemExample.cs" Link="Shared\Examples\FileSystemExample.cs" />
 		<Compile Include="..\IFY.Shimr.Tests\Examples\ThreadExample.cs" Link="Shared\Examples\ThreadExample.cs" />
 		<Compile Include="..\IFY.Shimr.Tests\Issues\Issue19.cs" Link="Shared\Issues\Issue19.cs" />
 		<Compile Include="..\IFY.Shimr.Tests\ConstructorTests.cs" Link="Shared\ConstructorTests.cs" />
@@ -46,7 +46,7 @@
 		<Compile Include="..\IFY.Shimr.Tests\StaticFieldShimTests.cs" Link="Shared\StaticFieldShimTests.cs" />
 		<Compile Include="..\IFY.Shimr.Tests\StaticInterfaceTests.cs" Link="Shared\StaticInterfaceTests.cs" />
 		<Compile Include="..\IFY.Shimr.Tests\StaticMemberTests.cs" Link="Shared\StaticMemberTests.cs" />
-		<Compile Include="..\IFY.Shimr.Tests\StructTests.cs" Link="Shared\StructTests.cs" />
+		<Compile Include="..\IFY.Shimr.Tests\StructTests.cs" Link="Shared\StructTests.cs" />-->
 	</ItemGroup>
 
 	<ItemGroup>
